--- a/test-final.tex
+++ b/test-final.tex
@@ -3,7 +3,7 @@
 % This version tests the 'final' option, which generates a PDF/A file for submission
 %
 \documentclass[ %% Final will produce PDF/A for submission
-    scrbook,
+    final,
     listoffigures,
     listoftables, 
     glossary]{cu-thesis}
