--- a/test-final.tex
+++ b/test-final.tex
@@ -8,14 +8,14 @@
     listoftables, 
     glossary]{cu-thesis}
 
-% Packages for this test pdf only, to generate text and verify layout
+% Packages for this test doc to generate text and verify figures
 % you probably don't want these
+\usepackage{blindtext}
 \usepackage{lipsum}
-\usepackage{bookmark}
-\usepackage[demo]{graphicx}
 
 % Set up bibtex or biblatex here
 \usepackage{cite}
+\usepackage{layout}
 
 % SETUP: Document Details
 \title{Thesis Title}
@@ -42,26 +42,13 @@
     % Create the frontmatter (title page, abstract, toc, etc.)
     \frontmatter
 
-    \chapter{First Chapter}
-    \lipsum[1]
+    % Create sample document
+    \Blinddocument
+    Example citation~\cite{nash51}
 
-    \section*{Lorem Ipsum}
-    \lipsum[3-5]
-
-    \subsection*{Dolor Sit Amet}
-    \lipsum[6-9]
-    \begin{figure}
-        \centering
-        \includegraphics[draft]{foo}
-        \caption[]{meaningful figure~\cite{nash51}}
-    \end{figure}
-
-    \subsection*{Consectetuer Ddipiscing}
-    \lipsum[10-11]
-
-    \chapter{Second Chapter}
-    \lipsum{12}
-
+    % Show layout for debug purposes 
+    \layout
+    
     \appendix
 
     % Bibliography
