--- a/cu-thesis.dtx
+++ b/cu-thesis.dtx
@@ -265,7 +265,12 @@ This work consists of the files cu-thesis.cls
 \newcommand{\cu@idocclass}{book}
 \cu@ifbool{scrbook}
     \renewcommand{\cu@idocclass}{scrbook}
+    \PassOptionsToClass{letterpaper}{\cu@idocclass}
+\else
+    \PassOptionsToClass{paper=letter}{\cu@idocclass}
+    \PassOptionsToClass{pagesize}{\cu@idocclass}
 \fi
+
 \PassOptionsToClass{oneside}{\cu@idocclass}
 \PassOptionsToClass{12pt}{\cu@idocclass}
 \cu@ifbool{final}
@@ -287,9 +292,9 @@ This work consists of the files cu-thesis.cls
 %% At this point our document class is loaded. We can load in helpful dependencies we need.
 %
 %    \begin{macrocode}
+\RequirePackage{iftex}
 \RequirePackage{xparse}
 \RequirePackage[utf8]{inputenc}
-\RequirePackage{calc}
 \RequirePackage[
     pdffitwindow=true,
     pdfpagelabels=true,
@@ -309,11 +314,15 @@ This work consists of the files cu-thesis.cls
 % Next, for creating PDF/A when in final mode we will use the helpful pdfx package.
 %    \begin{macrocode}
 \cu@ifbool{final}
-    \usepackage[a-1b]{pdfx}
+    \ifluatex
+        \RequirePackage{luatex85}
+    \fi
+    \RequirePackage[a-1b]{pdfx}
 \fi
 %    \end{macrocode}
 %
-%% For page formatting, refer to the following Carleton guidelines for thesis formatting
+%% For page formatting, refer to the following Carleton guidelines for thesis 
+%% formatting
 % \blockquote{
 %% All written and illustrative material on an 8 1\"\ x 11\"\ page, including page
 %% numbers, must fall within the following margins: one and one-half inches on 
@@ -324,48 +333,40 @@ This work consists of the files cu-thesis.cls
 %% on the top margin and one full inch on the other three sides.
 %}
 % 
-%% Within this context, use the \texttt{geometry} package to format the page within these bounds. A noteworthy point is that all text \textit{including page numbers} must fall within these margins.
+%% Within this context, use the \texttt{geometry} package to format the page 
+%% within these bounds. A noteworthy point is that all text 
+%% \textit{including page numbers} must fall within these margins.
+%%
+%% Doing this is tricky as geometry and koma-packages don't mix well. Use the 
+%% pass option to avoid geometry directly interfering with KOMA settings
 %    \begin{macrocode}
-\RequirePackage[letterpaper]{geometry}
-\newlength{\cu@bottom}
-\newlength{\cu@marginparwidth}
-\let\oldgeometry\geometry
-\let\oldnewgeometry\newgeometry
-\renewcommand{\geometry}[5][0.7]{
-    \setlength{\cu@marginparwidth}{#2}
-    \addtolength{\cu@marginparwidth}{-2.5mm}
-    \setlength{\cu@bottom}{#5}
-    \oldgeometry{letterpaper,left=#2,right=#3,top=#4,
-        bottom=\cu@bottom+#1\cu@bottom,
-        footskip=#1\cu@bottom,
-        marginparwidth=\cu@marginparwidth,
-        marginparsep=2mm
-        }
-}
-\renewcommand{\newgeometry}[5][0.7]{
-    \setlength{\cu@marginparwidth}{#2}
-    \addtolength{\cu@marginparwidth}{-2.5mm}
-    \setlength{\cu@bottom}{#5}
-    \oldnewgeometry{left=#2,right=#3,top=#4,
-    bottom=\cu@bottom+#1\cu@bottom,
-    footskip=#1\cu@bottom,
-    marginparwidth=\cu@marginparwidth,
-    marginparsep=2mm
-    }
-}
-\geometry{1.5in}{1in}{1in}{1in}
+\RequirePackage[includefoot,includehead]{geometry}
+\newcommand{\cu@setgeometry}{\geometry{%
+    left=1.5in,
+    right=1in,
+    top=1in,
+    bottom=1in}}
+\cu@ifbool{scrbook}
+    \AfterCalculatingTypearea{\cu@setgeometry}
+    \recalctypearea
+\else
+    \cu@setgeometry
+\fi
 \reversemarginpar
 %    \end{macrocode}
 %% Next is the line spacing (double), straightforward
 %    \begin{macrocode}
 \RequirePackage[doublespacing]{setspace}
 %    \end{macrocode}
-%% Next, deal with some edge case stuff. Scrbook and draft to not mix well. Set draft=false for srcbook.
+%% Set up headers and footers using KOMA's scrlayer-scrpage class. This works 
+%% with both the book and scrbook class. Ensure that we aren't setting draft 
+%% as this will cause rulers to apperar in the header/footer.
 %    \begin{macrocode}
-\cu@ifbool{scrbook}
-    \RequirePackage{scrlayer-scrpage}
-    \KOMAoptions{draft=false}
-\fi
+\RequirePackage[automark]{scrlayer-scrpage}
+\KOMAoptions{draft=false}
+\clearpairofpagestyles
+\chead{\headmark}
+\cfoot*{\pagemark}
 %    \end{macrocode}
 %% Environments used to fill sections of the thesis
 %%
@@ -458,6 +459,7 @@ This work consists of the files cu-thesis.cls
 %% Command to create the title page that follows Carleton's template
 %    \begin{macrocode}
 \newcommand{\cu@maketitle}{
+    \newgeometry{margin=1in}
     \begin{titlepage}
         \begin{center}
             {
@@ -503,6 +505,7 @@ This work consists of the files cu-thesis.cls
             }
         \end{center}
     \end{titlepage}
+    \restoregeometry
 }
 %    \end{macrocode}
 
@@ -523,24 +526,12 @@ This work consists of the files cu-thesis.cls
     \cu@maketitle
 %    \end{macrocode}
     %% Set up the page formatting for the rest of the paper
+    %% A note on page numbering, from the requirements:
+    %% ``Small Roman numerals are used in the preliminary section. All pages are to be numbered except for the title page on which number “i” is implied but not given...''
 %    \begin{macrocode}
-    \pagestyle{plain}
-    \newgeometry[0]{1.5in}{1.5in}{1.5in}{1.5in}
-    \cu@ifbool{final}
-    \else
-        \pagenumbering{roman}
-        \setcounter{page}{0}
-        \thispagestyle{empty}
-        \newpage
-    \fi
     \pagenumbering{roman}
-    \setcounter{page}{0}
-    \thispagestyle{empty}
-
-    \hypersetup{pdfsubject={\cu@inputsubjectline},pdfkeywords={\cu@inputkeywords}}
-
-    \newpage
-    \restoregeometry
+    \setcounter{page}{1}
+    \hypersetup{pdftitle={\@title},pdfauthor={\@author},pdfkeywords={\cu@inputkeywords}}
 
 %    \end{macrocode}
     %% Create abstract page
@@ -554,7 +545,7 @@ This work consists of the files cu-thesis.cls
 %    \begin{macrocode}
     \chapter*{Acknowledgements}
     \addcontentsline{toc}{chapter}{Acknowledgements}
-    \cu@inputacknowledgements{}
+    \cu@inputacknowledgements
 %    \end{macrocode}
     %% Create TOC
 %    \begin{macrocode}
