--- a/examples/test-draft.tex
+++ b/examples/test-draft.tex
@@ -1,12 +1,16 @@
 %
 % Demo doc that tests most of the features of the cu-thesis class
-% This version tests the 'final' option, which generates a PDF/A file for submission
+% This version tests the 'draft' option, which generates a editor-optimized 
+% thesis that has some extra features for editing (does not fully comply to Carleton specs)
 %
-\documentclass[ %% Final will produce PDF/A for submission
-    final,
+% NOTE: if cu-thesis is installed on your system, documentclass can just be cu-thesis
+%
+\documentclass[
+    draft,
+    scrbook,
     listoffigures,
-    listoftables, 
-    glossary]{cu-thesis}
+    listoftables,
+    glossary]{../cu-thesis}
 
 % Packages for this test doc to generate text and verify figures
 % you probably don't want these
@@ -15,7 +19,11 @@
 
 % Set up bibtex or biblatex here
 \usepackage{cite}
+
+% Layout is only used to show the page layout in this demo doc; you don't need this for a real thesis
 \usepackage{layout}
+
+\addtokomafont{disposition}{\rmfamily}
 
 % SETUP: Document Details
 \title{Thesis Title}
