--- a/cu-thesis.dtx
+++ b/cu-thesis.dtx
@@ -266,6 +266,7 @@ This work consists of the files cu-thesis.cls
 \cu@ifbool{scrbook}
     \renewcommand{\cu@idocclass}{scrbook}
     \PassOptionsToClass{letterpaper}{\cu@idocclass}
+    \PassOptionsToClass{headings=standardclasses}{\cu@idocclass}
 \else
     \PassOptionsToClass{paper=letter}{\cu@idocclass}
     \PassOptionsToClass{pagesize}{\cu@idocclass}
